--- a/extra_pages/abc.html
+++ b/extra_pages/abc.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
+    <link rel="shortcut icon" href="/logo.ico" type="image/x-icon">
 </head>
 <body>
     <p>Login Sucessfully.</p>
