--- a/extra_pages/register.html
+++ b/extra_pages/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="register.css">
-    <link rel="shortcut icon" href="/Image/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/logo.ico" type="image/x-icon">
 </head>
 <body>
     <script src="script.js"></script>
